merge feedback minor changes (extra lines, spelling consistency)